[package]
name = "resting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
error-chain = "0.12.4"
futures = "0.3.28"
reqwest = { version = "0.11", features = ["json", "blocking"] }
threadpool = "1.8.1"
time = "0.3.20"
tokio = {version = "1", features = ["full"]}
